[gd_scene load_steps=7 format=3 uid="uid://dt5g2sl77qawq"]

[ext_resource type="Script" path="res://Prototypes/Level/Pre-MVP/Level/Pre-MVP_Level.gd" id="1_24dil"]
[ext_resource type="TileSet" uid="uid://ba6o0fkaa7mlb" path="res://Assets/Level/Level.tres" id="2_dtjtg"]
[ext_resource type="PackedScene" uid="uid://bxasob4cd07o6" path="res://Prototypes/Treasure/Treasure.tscn" id="4_8tin4"]
[ext_resource type="PackedScene" uid="uid://dfxq5qp8t3uqp" path="res://Prototypes/Level/Pre-MVP/Player/Pre-MVP_Wizard.tscn" id="4_rhysm"]
[ext_resource type="PackedScene" uid="uid://ce7nqepu2xn6n" path="res://Prototypes/Level/Pre-MVP/Enemies/Pre-MVP_Enemy.tscn" id="5_3v0hd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bo1ed"]
size = Vector2(50, 21)

[node name="TilemapTest" type="Node2D"]
script = ExtResource("1_24dil")

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
tile_set = ExtResource("2_dtjtg")
collision_animatable = true
format = 2
layer_0/name = "Walls"
layer_0/tile_data = PackedInt32Array(983041, 196609, 5, 983042, 196609, 5, 983043, 196609, 5, 983044, 196609, 5, 983045, 196609, 5, 983046, 196609, 5, 983047, 196609, 5, 983048, 196609, 5, 983049, 196609, 5, 983050, 196609, 5, 983051, 196609, 5, 983052, 196609, 5, 983053, 196609, 5, 983054, 196609, 5, 983055, 196609, 5, 983056, 196609, 5, 983057, 196609, 5, 983058, 262145, 5, 983059, 327681, 5, 917523, 327681, 4, 851987, 327681, 4, 786451, 327681, 4, 720915, 327681, 4, 655379, 327681, 4, 589843, 327681, 4, 524307, 327681, 4, 458771, 327681, 4, 393235, 327681, 4, 327699, 327681, 4, 262163, 327681, 4, 196627, 327681, 4, 131091, 327681, 4, 65555, 327681, 4, 19, 327681, 4, 851968, 327680, 6, 786432, 327680, 6, 720896, 327680, 6, 655360, 327680, 6, 589824, 327680, 6, 524288, 327680, 6, 458752, 327680, 6, 393216, 327680, 6, 327680, 327680, 6, 262144, 327680, 6, 196608, 327680, 6, 131072, 327680, 6, 65536, 327680, 6, 0, 327680, 6, 1, 327680, 6, 65537, 327680, 6, 131073, 327680, 6, 196609, 327680, 6, 262145, 327680, 6, 327681, 327680, 6, 393217, 327680, 6, 458753, 327680, 6, 524289, 327680, 6, 589825, 327680, 6, 655361, 327680, 6, 720897, 327680, 6, 786433, 327680, 6, 851969, 327680, 6, 917505, 327680, 6, 851970, 327680, 6, 786434, 327680, 6, 720898, 327680, 6, 655362, 327680, 6, 589826, 327680, 6, 524290, 327680, 6, 458754, 327680, 6, 393218, 327680, 6, 327682, 327680, 6, 262146, 327680, 6, 196610, 327680, 6, 131074, 327680, 6, 65538, 327680, 6, 2, 327680, 6, 3, 327680, 6, 65539, 327680, 6, 131075, 327680, 6, 196611, 327680, 6, 262147, 327680, 6, 327683, 327680, 6, 393219, 327680, 6, 458755, 327680, 6, 524291, 327680, 6, 589827, 327680, 6, 655363, 327680, 6, 720899, 327680, 6, 786435, 327680, 6, 851971, 327680, 6, 917507, 327680, 6, 851972, 327680, 6, 786436, 327680, 6, 720900, 327680, 6, 655364, 327680, 6, 589828, 327680, 6, 524292, 327680, 6, 458756, 327680, 6, 393220, 327680, 6, 327684, 327680, 6, 262148, 327680, 6, 196612, 327680, 6, 131076, 327680, 6, 65540, 327680, 6, 4, 327680, 6, 5, 327680, 6, 65541, 327680, 6, 131077, 327680, 6, 196613, 327680, 6, 262149, 327680, 6, 327685, 327680, 6, 393221, 327680, 6, 458757, 327680, 6, 524293, 327680, 6, 589829, 327680, 6, 655365, 327680, 6, 720901, 327680, 6, 786437, 327680, 6, 851973, 327680, 6, 917509, 327680, 6, 851974, 327680, 6, 786438, 327680, 6, 720902, 327680, 6, 655366, 327680, 6, 589830, 327680, 6, 524294, 327680, 6, 458758, 327680, 6, 393222, 327680, 6, 327686, 327680, 6, 262150, 327680, 6, 196614, 327680, 6, 131078, 327680, 6, 65542, 327680, 6, 6, 327680, 6, 7, 327680, 6, 65543, 327680, 6, 131079, 327680, 6, 196615, 327680, 6, 262151, 327680, 6, 327687, 327680, 6, 393223, 327680, 6, 458759, 327680, 6, 524295, 327680, 6, 589831, 327680, 6, 655367, 327680, 6, 720903, 327680, 6, 786439, 327680, 6, 851975, 327680, 6, 917511, 327680, 6, 851976, 327680, 6, 786440, 327680, 6, 720904, 327680, 6, 655368, 327680, 6, 589832, 327680, 6, 524296, 327680, 6, 458760, 327680, 6, 393224, 327680, 6, 327688, 327680, 6, 262152, 327680, 6, 196616, 327680, 6, 131080, 327680, 6, 65544, 327680, 6, 8, 327680, 6, 9, 327680, 6, 65545, 327680, 6, 131081, 327680, 6, 196617, 327680, 6, 262153, 327680, 6, 327689, 327680, 6, 393225, 327680, 6, 458761, 327680, 6, 524297, 327680, 6, 589833, 327680, 6, 655369, 327680, 6, 720905, 327680, 6, 786441, 327680, 6, 851977, 327680, 6, 917513, 327680, 6, 851978, 327680, 6, 786442, 327680, 6, 720906, 327680, 6, 655370, 327680, 6, 589834, 327680, 6, 524298, 327680, 6, 458762, 327680, 6, 393226, 327680, 6, 327690, 327680, 6, 262154, 327680, 6, 196618, 327680, 6, 131082, 327680, 6, 65546, 327680, 6, 10, 327680, 6, 11, 327680, 6, 65547, 327680, 6, 131083, 327680, 6, 196619, 327680, 6, 262155, 327680, 6, 327691, 327680, 6, 393227, 327680, 6, 458763, 327680, 6, 524299, 327680, 6, 589835, 327680, 6, 655371, 327680, 6, 720907, 327680, 6, 786443, 327680, 6, 851979, 327680, 6, 917515, 327680, 6, 851980, 327680, 6, 786444, 327680, 6, 720908, 327680, 6, 655372, 327680, 6, 589836, 327680, 6, 524300, 327680, 6, 458764, 327680, 6, 393228, 327680, 6, 327692, 327680, 6, 262156, 327680, 6, 196620, 327680, 6, 131084, 327680, 6, 65548, 327680, 6, 12, 327680, 6, 13, 327680, 6, 65549, 327680, 6, 131085, 327680, 6, 196621, 327680, 6, 262157, 327680, 6, 327693, 327680, 6, 393229, 327680, 6, 458765, 327680, 6, 524301, 327680, 6, 589837, 327680, 6, 655373, 327680, 6, 720909, 327680, 6, 786445, 327680, 6, 851981, 327680, 6, 917517, 327680, 6, 851982, 327680, 6, 786446, 327680, 6, 720910, 327680, 6, 655374, 327680, 6, 589838, 327680, 6, 524302, 327680, 6, 458766, 327680, 6, 393230, 327680, 6, 327694, 327680, 6, 262158, 327680, 6, 196622, 327680, 6, 131086, 327680, 6, 65550, 327680, 6, 14, 327680, 6, 15, 327680, 6, 65551, 327680, 6, 131087, 327680, 6, 196623, 327680, 6, 262159, 327680, 6, 327695, 327680, 6, 393231, 327680, 6, 458767, 327680, 6, 524303, 327680, 6, 589839, 327680, 6, 655375, 327680, 6, 720911, 327680, 6, 786447, 327680, 6, 851983, 327680, 6, 917519, 327680, 6, 851984, 327680, 6, 786448, 327680, 6, 720912, 327680, 6, 655376, 327680, 6, 589840, 327680, 6, 524304, 327680, 6, 458768, 327680, 6, 393232, 327680, 6, 327696, 327680, 6, 262160, 327680, 6, 196624, 327680, 6, 131088, 327680, 6, 65552, 327680, 6, 16, 327680, 6, 17, 327680, 6, 65553, 327680, 6, 131089, 327680, 6, 196625, 327680, 6, 262161, 327680, 6, 327697, 327680, 6, 393233, 327680, 6, 458769, 327680, 6, 524305, 327680, 6, 589841, 327680, 6, 655377, 327680, 6, 720913, 327680, 6, 786449, 327680, 6, 851985, 327680, 6, 917521, 327680, 6, 851986, 327680, 6, 720914, 327680, 6, 589842, 327680, 6, 458770, 327680, 6, 327698, 327680, 6, 196626, 327680, 6, 65554, 327680, 6, 983040, 196609, 5, -65535, 262145, 0, -65534, 262145, 0, -65533, 262145, 0, -65532, 262145, 0, -65531, 262145, 0, -65530, 262145, 0, -65529, 262145, 0, -65525, 262145, 0, -65524, 262145, 0, -65523, 262145, 0, -65522, 262145, 0, -65521, 262145, 0, -65520, 262145, 0, -65519, 262145, 0, -65518, 262145, 0, -65517, 327681, 0, 65535, 1, 1, 131071, 1, 1, 196607, 1, 1, 262143, 1, 1, 327679, 1, 1, 393215, 1, 1, 458751, 1, 1, 524287, 1, 1, 589823, 1, 1, 655359, 1, 1, 720895, 1, 1, 786431, 1, 1, 851967, 1, 1, 917503, 1, 1, 983039, 1, 1, 1048575, 1, 5, -1, 1, 0, -65536, 131073, 0, 393234, 327680, 6, 262162, 327680, 6, 131090, 327680, 6, 18, 327680, 6, 524306, 327680, 6, 655378, 327680, 6, 786450, 327680, 6, 917522, 327680, 6, 917520, 327680, 6, 917518, 327680, 6, 917516, 327680, 6, 917514, 327680, 6, 917512, 327680, 6, 917510, 327680, 6, 917508, 327680, 6, 917506, 327680, 6, 917504, 327680, 6, -1114113, 1, 0, -1048577, 1, 1, -983041, 1, 1, -917505, 1, 1, -851969, 1, 1, -786433, 1, 1, -720897, 1, 1, -655361, 1, 1, -589825, 1, 1, -524289, 1, 1, -458753, 1, 1, -393217, 1, 1, -327681, 1, 1, -262145, 1, 1, -196609, 1, 1, -131073, 1, 1, -65537, 1, 5, -1179648, 131073, 0, -1114112, 327680, 6, -1048576, 327680, 6, -983040, 327680, 6, -917504, 327680, 6, -851968, 327680, 6, -786432, 327680, 6, -720896, 327680, 6, -655360, 327680, 6, -589824, 327680, 6, -524288, 327680, 6, -458752, 327680, 6, -393216, 327680, 6, -327680, 327680, 6, -262144, 327680, 6, -196608, 327680, 6, -131072, 196609, 5, -1179647, 262145, 0, -1114111, 327680, 6, -1048575, 327680, 6, -983039, 327680, 6, -917503, 327680, 6, -851967, 327680, 6, -786431, 327680, 6, -720895, 327680, 6, -655359, 327680, 6, -589823, 327680, 6, -524287, 327680, 6, -458751, 327680, 6, -393215, 327680, 6, -327679, 327680, 6, -262143, 327680, 6, -196607, 327680, 6, -131071, 196609, 5, -1179646, 262145, 0, -1114110, 327680, 6, -1048574, 327680, 6, -983038, 327680, 6, -917502, 327680, 6, -851966, 327680, 6, -786430, 327680, 6, -720894, 327680, 6, -655358, 327680, 6, -589822, 327680, 6, -524286, 327680, 6, -458750, 327680, 6, -393214, 327680, 6, -327678, 327680, 6, -262142, 327680, 6, -196606, 327680, 6, -131070, 196609, 5, -1179645, 262145, 0, -1114109, 327680, 6, -1048573, 327680, 6, -983037, 327680, 6, -917501, 327680, 6, -851965, 327680, 6, -786429, 327680, 6, -720893, 327680, 6, -655357, 327680, 6, -589821, 327680, 6, -524285, 327680, 6, -458749, 327680, 6, -393213, 327680, 6, -327677, 327680, 6, -262141, 327680, 6, -196605, 327680, 6, -131069, 196609, 5, -1179644, 262145, 0, -1114108, 327680, 6, -1048572, 327680, 6, -983036, 327680, 6, -917500, 327680, 6, -851964, 327680, 6, -786428, 327680, 6, -720892, 327680, 6, -655356, 327680, 6, -589820, 327680, 6, -524284, 327680, 6, -458748, 327680, 6, -393212, 327680, 6, -327676, 327680, 6, -262140, 327680, 6, -196604, 327680, 6, -131068, 196609, 5, -1179643, 262145, 0, -1114107, 327680, 6, -1048571, 327680, 6, -983035, 327680, 6, -917499, 327680, 6, -851963, 327680, 6, -786427, 327680, 6, -720891, 327680, 6, -655355, 327680, 6, -589819, 327680, 6, -524283, 327680, 6, -458747, 327680, 6, -393211, 327680, 6, -327675, 327680, 6, -262139, 327680, 6, -196603, 327680, 6, -131067, 196609, 5, -1179642, 262145, 0, -1114106, 327680, 6, -1048570, 327680, 6, -983034, 327680, 6, -917498, 327680, 6, -851962, 327680, 6, -786426, 327680, 6, -720890, 327680, 6, -655354, 327680, 6, -589818, 327680, 6, -524282, 327680, 6, -458746, 327680, 6, -393210, 327680, 6, -327674, 327680, 6, -262138, 327680, 6, -196602, 327680, 6, -131066, 196609, 5, -1179641, 262145, 0, -1114105, 327680, 6, -1048569, 327680, 6, -983033, 327680, 6, -917497, 327680, 6, -851961, 327680, 6, -786425, 327680, 6, -720889, 327680, 6, -655353, 327680, 6, -589817, 327680, 6, -524281, 327680, 6, -458745, 327680, 6, -393209, 327680, 6, -327673, 327680, 6, -262137, 327680, 6, -196601, 327680, 6, -131065, 196609, 5, -1114104, 327680, 6, -1048568, 327680, 6, -983032, 327680, 6, -917496, 327680, 6, -851960, 327680, 6, -786424, 327680, 6, -720888, 327680, 6, -655352, 327680, 6, -589816, 327680, 6, -524280, 327680, 6, -458744, 327680, 6, -393208, 327680, 6, -327672, 327680, 6, -262136, 327680, 6, -196600, 327680, 6, -1114103, 327680, 6, -1048567, 327680, 6, -983031, 327680, 6, -917495, 327680, 6, -851959, 327680, 6, -786423, 327680, 6, -720887, 327680, 6, -655351, 327680, 6, -589815, 327680, 6, -524279, 327680, 6, -458743, 327680, 6, -393207, 327680, 6, -327671, 327680, 6, -262135, 327680, 6, -196599, 327680, 6, -1114102, 327680, 6, -1048566, 327680, 6, -983030, 327680, 6, -917494, 327680, 6, -851958, 327680, 6, -786422, 327680, 6, -720886, 327680, 6, -655350, 327680, 6, -589814, 327680, 6, -524278, 327680, 6, -458742, 327680, 6, -393206, 327680, 6, -327670, 327680, 6, -262134, 327680, 6, -196598, 327680, 6, -1179637, 262145, 0, -1114101, 327680, 6, -1048565, 327680, 6, -983029, 327680, 6, -917493, 327680, 6, -851957, 327680, 6, -786421, 327680, 6, -720885, 327680, 6, -655349, 327680, 6, -589813, 327680, 6, -524277, 327680, 6, -458741, 327680, 6, -393205, 327680, 6, -327669, 327680, 6, -262133, 327680, 6, -196597, 327680, 6, -131061, 196609, 5, -1179636, 262145, 0, -1114100, 327680, 6, -1048564, 327680, 6, -983028, 327680, 6, -917492, 327680, 6, -851956, 327680, 6, -786420, 327680, 6, -720884, 327680, 6, -655348, 327680, 6, -589812, 327680, 6, -524276, 327680, 6, -458740, 327680, 6, -393204, 327680, 6, -327668, 327680, 6, -262132, 327680, 6, -196596, 327680, 6, -131060, 196609, 5, -1179635, 262145, 0, -1114099, 327680, 6, -1048563, 327680, 6, -983027, 327680, 6, -917491, 327680, 6, -851955, 327680, 6, -786419, 327680, 6, -720883, 327680, 6, -655347, 327680, 6, -589811, 327680, 6, -524275, 327680, 6, -458739, 327680, 6, -393203, 327680, 6, -327667, 327680, 6, -262131, 327680, 6, -196595, 327680, 6, -131059, 196609, 5, -1179634, 262145, 0, -1114098, 327680, 6, -1048562, 327680, 6, -983026, 327680, 6, -917490, 327680, 6, -851954, 327680, 6, -786418, 327680, 6, -720882, 327680, 6, -655346, 327680, 6, -589810, 327680, 6, -524274, 327680, 6, -458738, 327680, 6, -393202, 327680, 6, -327666, 327680, 6, -262130, 327680, 6, -196594, 327680, 6, -131058, 196609, 5, -1179633, 262145, 0, -1114097, 327680, 6, -1048561, 327680, 6, -983025, 327680, 6, -917489, 327680, 6, -851953, 327680, 6, -786417, 327680, 6, -720881, 327680, 6, -655345, 327680, 6, -589809, 327680, 6, -524273, 327680, 6, -458737, 327680, 6, -393201, 327680, 6, -327665, 327680, 6, -262129, 327680, 6, -196593, 327680, 6, -131057, 196609, 5, -1179632, 262145, 0, -1114096, 327680, 6, -1048560, 327680, 6, -983024, 327680, 6, -917488, 327680, 6, -851952, 327680, 6, -786416, 327680, 6, -720880, 327680, 6, -655344, 327680, 6, -589808, 327680, 6, -524272, 327680, 6, -458736, 327680, 6, -393200, 327680, 6, -327664, 327680, 6, -262128, 327680, 6, -196592, 327680, 6, -131056, 196609, 5, -1179631, 262145, 0, -1114095, 327680, 6, -1048559, 327680, 6, -983023, 327680, 6, -917487, 327680, 6, -851951, 327680, 6, -786415, 327680, 6, -720879, 327680, 6, -655343, 327680, 6, -589807, 327680, 6, -524271, 327680, 6, -458735, 327680, 6, -393199, 327680, 6, -327663, 327680, 6, -262127, 327680, 6, -196591, 327680, 6, -131055, 196609, 5, -1179630, 262145, 0, -1114094, 327680, 6, -1048558, 327680, 6, -983022, 327680, 6, -917486, 327680, 6, -851950, 327680, 6, -786414, 327680, 6, -720878, 327680, 6, -655342, 327680, 6, -589806, 327680, 6, -524270, 327680, 6, -458734, 327680, 6, -393198, 327680, 6, -327662, 327680, 6, -262126, 327680, 6, -196590, 327680, 6, -131054, 262145, 5, -1179629, 327681, 0, -1114093, 327681, 4, -1048557, 327681, 4, -983021, 327681, 4, -917485, 327681, 4, -851949, 327681, 4, -786413, 327681, 4, -720877, 327681, 4, -655341, 327681, 4, -589805, 327681, 4, -524269, 327681, 4, -458733, 327681, 4, -393197, 327681, 4, -327661, 327681, 4, -262125, 327681, 4, -196589, 327681, 4, -131053, 327681, 5, -2228225, 1, 0, -2162689, 1, 1, -2097153, 1, 1, -2031617, 1, 1, -1966081, 1, 1, -1900545, 1, 1, -1835009, 1, 1, -1769473, 1, 1, -1703937, 1, 1, -1638401, 1, 1, -1572865, 1, 1, -1507329, 1, 1, -1441793, 1, 1, -1376257, 1, 1, -1310721, 1, 1, -1245185, 1, 1, -1179649, 1, 5, -2293760, 131073, 0, -2228224, 327680, 6, -2162688, 327680, 6, -2097152, 327680, 6, -2031616, 327680, 6, -1966080, 327680, 6, -1900544, 327680, 6, -1835008, 327680, 6, -1769472, 327680, 6, -1703936, 327680, 6, -1638400, 327680, 6, -1572864, 327680, 6, -1507328, 327680, 6, -1441792, 327680, 6, -1376256, 327680, 6, -1310720, 327680, 6, -1245184, 196609, 5, -2293759, 262145, 0, -2228223, 327680, 6, -2162687, 327680, 6, -2097151, 327680, 6, -2031615, 327680, 6, -1966079, 327680, 6, -1900543, 327680, 6, -1835007, 327680, 6, -1769471, 327680, 6, -1703935, 327680, 6, -1638399, 327680, 6, -1572863, 327680, 6, -1507327, 327680, 6, -1441791, 327680, 6, -1376255, 327680, 6, -1310719, 327680, 6, -1245183, 196609, 5, -2293758, 262145, 0, -2228222, 327680, 6, -2162686, 327680, 6, -2097150, 327680, 6, -2031614, 327680, 6, -1966078, 327680, 6, -1900542, 327680, 6, -1835006, 327680, 6, -1769470, 327680, 6, -1703934, 327680, 6, -1638398, 327680, 6, -1572862, 327680, 6, -1507326, 327680, 6, -1441790, 327680, 6, -1376254, 327680, 6, -1310718, 327680, 6, -1245182, 196609, 5, -2293757, 262145, 0, -2228221, 327680, 6, -2162685, 327680, 6, -2097149, 327680, 6, -2031613, 327680, 6, -1966077, 327680, 6, -1900541, 327680, 6, -1835005, 327680, 6, -1769469, 327680, 6, -1703933, 327680, 6, -1638397, 327680, 6, -1572861, 327680, 6, -1507325, 327680, 6, -1441789, 327680, 6, -1376253, 327680, 6, -1310717, 327680, 6, -1245181, 196609, 5, -2293756, 262145, 0, -2228220, 327680, 6, -2162684, 327680, 6, -2097148, 327680, 6, -2031612, 327680, 6, -1966076, 327680, 6, -1900540, 327680, 6, -1835004, 327680, 6, -1769468, 327680, 6, -1703932, 327680, 6, -1638396, 327680, 6, -1572860, 327680, 6, -1507324, 327680, 6, -1441788, 327680, 6, -1376252, 327680, 6, -1310716, 327680, 6, -1245180, 196609, 5, -2293755, 262145, 0, -2228219, 327680, 6, -2162683, 327680, 6, -2097147, 327680, 6, -2031611, 327680, 6, -1966075, 327680, 6, -1900539, 327680, 6, -1835003, 327680, 6, -1769467, 327680, 6, -1703931, 327680, 6, -1638395, 327680, 6, -1572859, 327680, 6, -1507323, 327680, 6, -1441787, 327680, 6, -1376251, 327680, 6, -1310715, 327680, 6, -1245179, 196609, 5, -2293754, 262145, 0, -2228218, 327680, 6, -2162682, 327680, 6, -2097146, 327680, 6, -2031610, 327680, 6, -1966074, 327680, 6, -1900538, 327680, 6, -1835002, 327680, 6, -1769466, 327680, 6, -1703930, 327680, 6, -1638394, 327680, 6, -1572858, 327680, 6, -1507322, 327680, 6, -1441786, 327680, 6, -1376250, 327680, 6, -1310714, 327680, 6, -1245178, 196609, 5, -2293753, 262145, 0, -2228217, 327680, 6, -2162681, 327680, 6, -2097145, 327680, 6, -2031609, 327680, 6, -1966073, 327680, 6, -1900537, 327680, 6, -1835001, 327680, 6, -1769465, 327680, 6, -1703929, 327680, 6, -1638393, 327680, 6, -1572857, 327680, 6, -1507321, 327680, 6, -1441785, 327680, 6, -1376249, 327680, 6, -1310713, 327680, 6, -1245177, 196609, 5, -2228216, 327680, 6, -2162680, 327680, 6, -2097144, 327680, 6, -2031608, 327680, 6, -1966072, 327680, 6, -1900536, 327680, 6, -1835000, 327680, 6, -1769464, 327680, 6, -1703928, 327680, 6, -1638392, 327680, 6, -1572856, 327680, 6, -1507320, 327680, 6, -1441784, 327680, 6, -1376248, 327680, 6, -1310712, 327680, 6, -2228215, 327680, 6, -2162679, 327680, 6, -2097143, 327680, 6, -2031607, 327680, 6, -1966071, 327680, 6, -1900535, 327680, 6, -1834999, 327680, 6, -1769463, 327680, 6, -1703927, 327680, 6, -1638391, 327680, 6, -1572855, 327680, 6, -1507319, 327680, 6, -1441783, 327680, 6, -1376247, 327680, 6, -1310711, 327680, 6, -2228214, 327680, 6, -2162678, 327680, 6, -2097142, 327680, 6, -2031606, 327680, 6, -1966070, 327680, 6, -1900534, 327680, 6, -1834998, 327680, 6, -1769462, 327680, 6, -1703926, 327680, 6, -1638390, 327680, 6, -1572854, 327680, 6, -1507318, 327680, 6, -1441782, 327680, 6, -1376246, 327680, 6, -1310710, 327680, 6, -2293749, 262145, 0, -2228213, 327680, 6, -2162677, 327680, 6, -2097141, 327680, 6, -2031605, 327680, 6, -1966069, 327680, 6, -1900533, 327680, 6, -1834997, 327680, 6, -1769461, 327680, 6, -1703925, 327680, 6, -1638389, 327680, 6, -1572853, 327680, 6, -1507317, 327680, 6, -1441781, 327680, 6, -1376245, 327680, 6, -1310709, 327680, 6, -1245173, 196609, 5, -2293748, 262145, 0, -2228212, 327680, 6, -2162676, 327680, 6, -2097140, 327680, 6, -2031604, 327680, 6, -1966068, 327680, 6, -1900532, 327680, 6, -1834996, 327680, 6, -1769460, 327680, 6, -1703924, 327680, 6, -1638388, 327680, 6, -1572852, 327680, 6, -1507316, 327680, 6, -1441780, 327680, 6, -1376244, 327680, 6, -1310708, 327680, 6, -1245172, 196609, 5, -2293747, 262145, 0, -2228211, 327680, 6, -2162675, 327680, 6, -2097139, 327680, 6, -2031603, 327680, 6, -1966067, 327680, 6, -1900531, 327680, 6, -1834995, 327680, 6, -1769459, 327680, 6, -1703923, 327680, 6, -1638387, 327680, 6, -1572851, 327680, 6, -1507315, 327680, 6, -1441779, 327680, 6, -1376243, 327680, 6, -1310707, 327680, 6, -1245171, 196609, 5, -2293746, 262145, 0, -2228210, 327680, 6, -2162674, 327680, 6, -2097138, 327680, 6, -2031602, 327680, 6, -1966066, 327680, 6, -1900530, 327680, 6, -1834994, 327680, 6, -1769458, 327680, 6, -1703922, 327680, 6, -1638386, 327680, 6, -1572850, 327680, 6, -1507314, 327680, 6, -1441778, 327680, 6, -1376242, 327680, 6, -1310706, 327680, 6, -1245170, 196609, 5, -2293745, 262145, 0, -2228209, 327680, 6, -2162673, 327680, 6, -2097137, 327680, 6, -2031601, 327680, 6, -1966065, 327680, 6, -1900529, 327680, 6, -1834993, 327680, 6, -1769457, 327680, 6, -1703921, 327680, 6, -1638385, 327680, 6, -1572849, 327680, 6, -1507313, 327680, 6, -1441777, 327680, 6, -1376241, 327680, 6, -1310705, 327680, 6, -1245169, 196609, 5, -2293744, 262145, 0, -2228208, 327680, 6, -2162672, 327680, 6, -2097136, 327680, 6, -2031600, 327680, 6, -1966064, 327680, 6, -1900528, 327680, 6, -1834992, 327680, 6, -1769456, 327680, 6, -1703920, 327680, 6, -1638384, 327680, 6, -1572848, 327680, 6, -1507312, 327680, 6, -1441776, 327680, 6, -1376240, 327680, 6, -1310704, 327680, 6, -1245168, 196609, 5, -2293743, 262145, 0, -2228207, 327680, 6, -2162671, 327680, 6, -2097135, 327680, 6, -2031599, 327680, 6, -1966063, 327680, 6, -1900527, 327680, 6, -1834991, 327680, 6, -1769455, 327680, 6, -1703919, 327680, 6, -1638383, 327680, 6, -1572847, 327680, 6, -1507311, 327680, 6, -1441775, 327680, 6, -1376239, 327680, 6, -1310703, 327680, 6, -1245167, 196609, 5, -2293742, 262145, 0, -2228206, 327680, 6, -2162670, 327680, 6, -2097134, 327680, 6, -2031598, 327680, 6, -1966062, 327680, 6, -1900526, 327680, 6, -1834990, 327680, 6, -1769454, 327680, 6, -1703918, 327680, 6, -1638382, 327680, 6, -1572846, 327680, 6, -1507310, 327680, 6, -1441774, 327680, 6, -1376238, 327680, 6, -1310702, 327680, 6, -1245166, 262145, 5, -2293741, 327681, 0, -2228205, 327681, 4, -2162669, 327681, 4, -2097133, 327681, 4, -2031597, 327681, 4, -1966061, 327681, 4, -1900525, 327681, 4, -1834989, 327681, 4, -1769453, 327681, 4, -1703917, 327681, 4, -1638381, 327681, 4, -1572845, 327681, 4, -1507309, 327681, 4, -1441773, 327681, 4, -1376237, 327681, 4, -1310701, 327681, 4, -1245165, 327681, 5)
layer_1/name = "Gate"
layer_1/tile_data = PackedInt32Array(-65528, 786433, 9, -65527, 851969, 9, -65526, 851969, 9, -131064, 786433, 8, -131063, 786433, 8, -131062, 851969, 8, -1245176, 786433, 8, -1179640, 786433, 9, -1245175, 786433, 8, -1179639, 786433, 9, -1245174, 851969, 8, -1179638, 851969, 9, -2359288, 786433, 8, -2293752, 786433, 9, -2359287, 786433, 8, -2293751, 786433, 9, -2359286, 851969, 8, -2293750, 851969, 9)

[node name="End Game" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="End Game"]
position = Vector2(152, -555)
shape = SubResource("RectangleShape2D_bo1ed")

[node name="Wizard" parent="." instance=ExtResource("4_rhysm")]
position = Vector2(154, 171)

[node name="Camera2D" type="Camera2D" parent="Wizard"]
position = Vector2(-9, -14)
zoom = Vector2(3, 3)

[node name="Treasure" parent="." instance=ExtResource("4_8tin4")]
position = Vector2(148, 55)
money = 5

[node name="Treasure2" parent="." instance=ExtResource("4_8tin4")]
position = Vector2(282, -75)
money = 5

[node name="Treasure3" parent="." instance=ExtResource("4_8tin4")]
position = Vector2(33, -240)
money = 5

[node name="Treasure4" parent="." instance=ExtResource("4_8tin4")]
position = Vector2(35, -337)
money = 5

[node name="Treasure5" parent="." instance=ExtResource("4_8tin4")]
position = Vector2(273, -327)
money = 5

[node name="Treasure6" parent="." instance=ExtResource("4_8tin4")]
position = Vector2(76, -528)
money = 5

[node name="Enemy" parent="." instance=ExtResource("5_3v0hd")]
position = Vector2(18, -211)

[node name="Enemy2" parent="." instance=ExtResource("5_3v0hd")]
position = Vector2(115, -529)

[node name="Enemy3" parent="." instance=ExtResource("5_3v0hd")]
position = Vector2(14, -371)

[node name="Enemy4" parent="." instance=ExtResource("5_3v0hd")]
position = Vector2(178, -415)

[node name="Enemy5" parent="." instance=ExtResource("5_3v0hd")]
position = Vector2(60, -371)

[node name="Enemy6" parent="." instance=ExtResource("5_3v0hd")]
position = Vector2(76, -320)

[node name="Enemy7" parent="." instance=ExtResource("5_3v0hd")]
position = Vector2(75, -254)

[node name="Enemy8" parent="." instance=ExtResource("5_3v0hd")]
position = Vector2(52, -203)

[node name="Enemy9" parent="." instance=ExtResource("5_3v0hd")]
position = Vector2(183, -530)

[connection signal="body_entered" from="End Game" to="." method="_on_body_entered"]
